feat(server-shop): runtime-state, limits/pricing & UI-sync overhaul Refactored the ServerShop end-to-end flow (server, networking, menu, screen) for consistent offer state and more stable UI synchronization. - Introduce persistent runtime state per offer (stock, daily purchases, restock timestamps, demand purchases, demand decay). - Introduce viewer-specific offer view state and sync it separately to clients (max purchasable, daily/stock/restock, price factor). - Extract runtime calculations into `ServerShopRuntimeMath` (pure logic) for limits, restock, price factor, and timer formatting. - Rework `ServerShopManager`:   - slot-based purchase transactions with runtime upkeep   - validated mutations via `MutationResult` (clear error messages)   - robust save/load with `.tmp` + `.bak` + atomic move + restore   - clean viewer refresh including page clamping - Remove global `selected_page` from `ServerShopData`; page selection is now menu-/player-scoped instead of globally persisted. - Extend `ServerShopOffer` with runtime state and `effectivePayments()` (demand-based costs), plus stricter validation. - Refactor `ServerShopMenu`:   - improved payment matching (single/dual slot, swapped order)   - limit-aware result-slot availability   - safe bulk purchase (shift-click) with limit and inventory-fit checks - Update network sync:   - `ServerShopSyncPacket` transfers data + view states + edit permission   - `ServerShopSelectPagePacket` updates local menu page instead of mutating global state   - legacy paths (`ServerShopPurchasePacket`, `ServerShopFillRequestPacket`) are marked deprecated/no-op and no longer registered - Refactor `ServerShopScreen` into modular components:   `ServerShopEditorControls`, `ServerShopPageSidebar`, `ServerShopOverlayRenderer`, `BaseModalScreen`. - Add new modals: `OfferLimitsEditor`, `OfferPricingEditor`, and improve text input flow. - Add new GUI icons and extend EN/DE localization (status, tooltips, errors, editor labels). - Add config `serverS